# lingtai-feishu

./: NOTICE  README.md  REVIEW-pr1.md  pyproject.toml
reports/: feishu-0.2.1-release-readiness-20260612.html  kernel-licc-client-migration-explainer.html
scripts/: footprint_audit.py
src/lingtai_feishu/: __main__.py  account.py  manager.py  server.py
tests/: test_account_state.py  test_conversation_preview.py  test_identity_metadata.py  test_incoming_dedupe.py  test_licc_wrapper.py  test_lingtai_profile_resources.py  test_onboarding_resources.py  test_send_typing_cleanup.py  test_sent_in_check_read.py  test_voice_audio_cleanup.py  test_ws_event_loop.py
