[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingtai-feishu"
version = "0.1.0"
description = "LingTai Feishu/Lark MCP server — message API client with LICC inbox callback."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "lark-oapi>=1.4.0",
]

[project.scripts]
lingtai-feishu = "lingtai_feishu.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lingtai_feishu"]
