[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingtai-feishu"
version = "0.2.0"
description = "LingTai Feishu/Lark MCP server — message API client with LICC inbox callback."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zesen Huang", email = "hzsbazinga@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "lark-oapi>=1.4.0",
]

[project.optional-dependencies]
voice = ["faster-whisper>=1.0.0"]

[project.urls]
Homepage = "https://github.com/Lingtai-AI/lingtai-feishu"
Repository = "https://github.com/Lingtai-AI/lingtai-feishu"
"LingTai" = "https://lingtai.ai"

[project.scripts]
lingtai-feishu = "lingtai_feishu.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lingtai_feishu"]
